--- a/about.html
+++ b/about.html
@@ -97,24 +97,24 @@
           aspects, attending seminars, answering calls and preparing weekly
           accomplishment reports.
           <br /><br />
-          Currently, as a UI/UX Designer at Daily Social Studio for nearly 6
-          months, I have had the opportunity to hone my skills in various areas
-          of design. My primary focus has been on UX research, where I have
-          gained valuable experience in conducting competitors analysis and
-          creating user flows. In addition to that, I have also dabbled in game
-          design, web design, app design, and WordPress design, which have
-          provided me with a diverse range of design challenges and allowed me
-          to expand my skillset. In my role, I have been involved in designing
-          and prototyping various web and mobile applications, working closely
-          with developers to ensure that the final product meets the needs of
-          our users. I have also contributed to the development of our company's
-          WordPress website, creating custom designs and implementing them using
-          WordPress themes and plugins. Overall, working at Daily Social Studio
-          has allowed me to gain practical experience in various aspects of
-          design and has provided me with opportunities to work on exciting
-          projects with a talented and dedicated team. I look forward to
-          continuing to develop my skills as a UI/UX Designer and contributing
-          to the success of the company.
+          Currently, as a UI/UX Designer at Daily Social Studio, I have had the
+          opportunity to hone my skills in various areas of design. My primary
+          focus has been on UX research, where I have gained valuable experience
+          in conducting competitors analysis and creating user flows. In
+          addition to that, I have also dabbled in game design, web design, app
+          design, and WordPress design, which have provided me with a diverse
+          range of design challenges and allowed me to expand my skillset. In my
+          role, I have been involved in designing and prototyping various web
+          and mobile applications, working closely with developers to ensure
+          that the final product meets the needs of our users. I have also
+          contributed to the development of our company's WordPress website,
+          creating custom designs and implementing them using WordPress themes
+          and plugins. Overall, working at Daily Social Studio has allowed me to
+          gain practical experience in various aspects of design and has
+          provided me with opportunities to work on exciting projects with a
+          talented and dedicated team. I look forward to continuing to develop
+          my skills as a UI/UX Designer and contributing to the success of the
+          company.
         </span>
       </section>
 
